# SolarViewer

./: .gitignore  AstroSQL.md  CLAUDE.md  Cargo.toml  MULTI_STAR_NEXT_STEPS.md  PROJECT.md  README.md  StarMap2D_Visualization.md  analyze_empty_systems.py  analyze_multistar.py  export_stars_full.py  setup_database.ps1  stars.csv  stars_complete.csv  test_multistar.rs  visualize_amateru.py
docs/: COORDINATE_SYSTEMS.md  DesignPlans.md  GITHUB_SETUP.md  MULTISTAR_SUMMARY.md  SCHEMA.md  STELLARFORGE.md  STELLARFORGE_DATABASE.md  STELLARFORGE_SUMMARY.md  StarMap_Rendering.md  Thoughts.md
examples/: proper_coordinates.rs  stellarforge_demo.rs
sql/: 01_create_database.sql  02_session_tables.sql  03_stellar_tables.sql  04_political_tables.sql  05_routes_tables.sql  06_groups_sectors_tables.sql  07_refactor_bodies.sql
src/: lib.rs  main.rs
src/extraction/: csv_export.rs  mod.rs  multistar_analysis.rs  reader.rs
src/schema/: discovery.rs  documentation.rs  mod.rs
src/stellar_forge/: associations.rs  bodies.rs  builders.rs  cli.rs  containers.rs  coordinates.rs  core.rs  frames.rs  mod.rs  motion.rs  physical.rs  services.rs  storage.rs
src/stellar_forge/database/: connection.rs  migrations.rs  mod.rs  models.rs  queries.rs  repository.rs
src/stellar_forge/import/: converter.rs  importer.rs  mapping.rs  mod.rs
src/visualization/: enhanced_renderer.rs  mod.rs  projection.rs  renderer.rs  spectral.rs
