[package]
name = "solarviewer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Extract and visualize stellar cartography data from Astrosynthesis"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rem5357/SolarViewer"

[[bin]]
name = "solarviewer"
path = "src/main.rs"

[[bin]]
name = "stellarforge"
path = "src/bin/stellarforge.rs"

[[bin]]
name = "astro-import"
path = "src/bin/astro_import.rs"

[dependencies]
# SQLite access for Astrosynthesis .AstroDB files
rusqlite = { version = "0.32", features = ["bundled"] }

# PostgreSQL + async runtime
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
postgres = "0.19"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"

# Graph processing for layout algorithms
petgraph = "0.6"

# Linear algebra for PCA and transformations
nalgebra = "0.32"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.11"

# Date/Time for documentation timestamps
chrono = "0.4"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }

# UUID for unique identifiers
uuid = { version = "1.5", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"

# Random number generation
rand = "0.8"

# Async for database operations
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json", "chrono"] }

# Binary serialization (optional)
bincode = { version = "1.3", optional = true }

# Image rendering for star maps
image = "0.24"
imageproc = "0.23"

# Advanced 2D rendering
tiny-skia = "0.11"

# Font rendering for labels
fontdue = "0.9"

# Color manipulation
palette = "0.7"

# Deterministic random for procedural generation
rand_chacha = "0.3"

[features]
default = []
binary = ["bincode"]

[dev-dependencies]
criterion = "0.5"

# Benchmarks will be added later
# [[bench]]
# name = "layout_benchmarks"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
